cros: Move focus to tap button when showing re-auth or Bedtime messages

The |tap_button_| in |LoginUserView| is responsible for handling tap
events on the user view. Moving focus to the tap button when showing
the messages is reasonable because 1) Tapping the user view will open
the Gaia dialog, 2) It avoids the unnecessary blue ring focus.

Bug: 845251
Change-Id: I522f41523750c0e1f95b7aedbdec862b3261317e
Reviewed-on: https://chromium-review.googlesource.com/1111079
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569454}
Former-commit-id: a4fbb00ad9d814cbb0365762b9dd6e47806f2624